Fix overflow and product padding in SearchModal

--- a/frontend/components/Header/components/SearchBlock/SearchModal.module.scss
+++ b/frontend/components/Header/components/SearchBlock/SearchModal.module.scss
@@ -16,7 +16,7 @@
 
     box-sizing: border-box;
 
-    overflow: scroll;
+    overflow-y: auto;
 
     z-index: 11;
 }
@@ -28,7 +28,7 @@
     width: 100%;
     height: 50px;
 
-    padding: 0 1.25em;
+    padding: 1.25em 1.25em;
     box-sizing: border-box;
 
     text-decoration: none;
